--- a/paper/references.bib
+++ b/paper/references.bib
@@ -2220,21 +2220,15 @@ archivePrefix = "arXiv",
   journal = {\mnras\ submitted},
      year = 2014,
     month = march,
-   volume = 552,
-      eid = {A80},
-    pages = {A80},
 }
 
 
-@ARTICLE{gastaldello,
+@ARTICLE{verdugo,
    author = {{Verdugo}, T. and {Foex}, G.},
     title = "{Characterizing SL2S galaxy groups using the Einstein radius}",
   journal = {\aa\ submitted},
      year = 2014,
     month = march,
-   volume = 552,
-      eid = {A80},
-    pages = {A80},
 }
 
 
