empezando a estructurar el texto

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -100,12 +100,10 @@ discussion and conclusion in Sections \ref{sec:discussion} and
 \section{Simulation and halo catalogs}
 \label{sec:simulation}
 
-The analysis presented in this paper uses mainly the Bolshoi (250
-Mpch$^{-1}$ simulation box, 1 kpch$^{-1}$ resolution) Database
-simulation described in \citet{2011ApJ...740..102K}. The simulation
-follows the evolution of 8.6 billion particle cosmological N-body
-simulation from z=80 to z=0 in a comoving cube of $250$ Mpch$^{-1}$
-on a side. The cosmology used  corresponds to  the spatially flat
+We use the Bolshoi Run, a cosmological DM only simulation over a cubic
+volume of 250 comoving \hMpc on a side. The simulation uses the ART code to
+follow the evolution of  a dark matter density field sampled with
+$2024^3$ from $z=80$ to $z=0$ [...]. The cosmology used  corresponds to  the spatially flat
 concordance model with the following parameters:  the density
 parameter for matter (dark matter$+$baryons) $\Omega_m=0.27$, the
 density parameter for baryonic matter  $\Omega_b=0.0469$, the density
@@ -116,9 +114,10 @@ density fluctuation (at redshift z$=$0) $\sigma_8=0.82$.  The number
 of particles used for each of the DM component was $2048^3$, resulting
 in a mass resolution of $1.35 \times 10^8$ M$_{\odot}$h$^{-1}$.   
 
+\citet{2011ApJ...740..102K}. 
+
 \section{Bullet Geometry and Measurement Setup}
 \label{sec:setup}
-
 
 \section{Results}
 \label{sec:results}
