--- a/paper/references.bib
+++ b/paper/references.bib
@@ -2214,12 +2214,11 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{gastaldello,
+@ARTICLE{Gastaldello,
    author = {{Gastaldello}, F. and {Limousin}, M. and {Foex}, G.},
     title = "{Dark matter-baryons separation at the lowest mass scale: the Bullet Group}",
   journal = {\mnras\ submitted},
-     year = 2014,
-    month = march,
+     year = 2014
 }
 
 
@@ -2227,8 +2226,7 @@ archivePrefix = "arXiv",
    author = {{Verdugo}, T. and {Foex}, G.},
     title = "{Characterizing SL2S galaxy groups using the Einstein radius}",
   journal = {\aa\ submitted},
-     year = 2014,
-    month = march,
+     year = 2014
 }
 
 
