--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -44,7 +44,7 @@
 
 \begin{abstract}
 We estimate the expected distribution of displacements between the two
-dominand dark matter peaks in halos within a mass range corresponding
+dominant dark matter peaks in halos within a mass range corresponding
 to galaxy groups. We find that the probability of finding a system
 similar with displacements of $\sim$400 kpch$^{-1}$ is between 40\%
 for z$=0$ and 60\% for z$=1$ and $\Lambda$CDM standard model, which
