--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -1,4 +1,5 @@
-\documentclass{emulateapj}
+%\documentclass{emulateapj}
+\documentclass{aastex}
 \submitted{{\it Submitted for publication in ApJL}}
 \usepackage{multirow,color,wrapfig,ulem}
 \usepackage {graphicx}
@@ -43,6 +44,7 @@
   M\'erida 5101-A, Venezuela}        
 
 \begin{abstract}
+
 We estimate the expected distribution of displacements between the two
 dominant dark matter peaks in halos within a mass range corresponding
 to galaxy groups. We find that the probability of finding a system
@@ -180,7 +182,7 @@ displacements and this is shown in the Figure \ref{displacements} for the two gr
   
 \begin{figure*}
 \begin{center}
-%\includegraphics[width=0.90\textwidth]{Bullet_Group.eps}
+\includegraphics[width=0.90\textwidth]{Figures_eps/Bullet_Group.eps}
 \end{center}
 \caption{Configuration for a host halo (dashed circle) and sub-structure (black circle) in the sample. } 
 \label{configuration}
@@ -189,8 +191,8 @@ displacements and this is shown in the Figure \ref{displacements} for the two gr
 
 \begin{figure*}
 \begin{center}
-%\includegraphics[width=1.0\textwidth]{Figures_eps/figure_7_2.eps}
-%\includegraphics[width=1.0\textwidth]{Figures_eps/figure_7_3.eps}
+\includegraphics[width=1.0\textwidth]{Figures_eps/figure_7_2.eps}
+\includegraphics[width=1.0\textwidth]{Figures_eps/figure_7_3.eps}
 \end{center}
 \caption{Scatter $\left(\frac{\nu_{circ,sub}}{\nu_{circ,halo}}\right)$
   vs $d_{2d,(X,Y)}$ for different redshifts. The  horizontal dashed
@@ -209,7 +211,7 @@ displacements and this is shown in the Figure \ref{displacements} for the two gr
 
 \begin{figure*}
 \begin{center}
-%\includegraphics[width=1.1\textwidth]{Figures_eps/figure_7_1.eps}
+\includegraphics[width=1.1\textwidth]{Figures_eps/figure_7_1.eps}
 \end{center}
 \caption{Cumulative distribution (P$>d_{2d,(X,Y)}$) of displacements
   for the projection (X,Y). {\bf Left panel:} Sample with
@@ -242,7 +244,7 @@ is shown the scatter plot of $cos(\theta{})$ vs $X_{off,new}=\frac{d_{2d,(X,Y)}}
 
 \begin{figure*}
 \begin{center}
-%\includegraphics[width=1.0\textwidth]{Figures_eps/figure_8_1_nu=0.5_300kms_700kms.eps}
+\includegraphics[width=1.0\textwidth]{Figures_eps/figure_8_1_nu=0.5_300kms_700kms.eps}
 \end{center}
 \caption{Scatter of $cos(\theta)$ vs $X_{off,new}$. The red dashed line correpond to the limit for $cos(\theta{})>0.5$,  
 where the substructure is emerging from the host halo and  $\left(\frac{\nu_{circ,sub}}{\nu_{circ,halo}}\right)\geq0.5$, 
@@ -252,7 +254,7 @@ cicular velocities $<700$ kms$^{-1}$ and different redshifts.}
 
 \begin{figure*}
 \begin{center}
-%\includegraphics[width=1.0\textwidth]{Figures_eps/figure_8_3_nu=0.5_300kms_700kms.eps}
+\includegraphics[width=1.0\textwidth]{Figures_eps/figure_8_3_nu=0.5_300kms_700kms.eps}
 \end{center}
 \caption{Cumulative distribution of $d_{real, (X,Y)}$ for $cos(\theta)>0.5$, $\left(\frac{\nu_{circ,sub}}{\nu_{circ,halo}}\right)\geq0.5$, 
 cicular velocities $<700$ kms$^{-1}$ and different redshifts.} 
