--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -114,12 +114,47 @@ parameter $h=0.7$, the
 normalization of the Power spectrum $n=0.95$ and the amplitude of mass
 density fluctuation (at redshift z$=$0) $\sigma_8=0.82$.  The number
 of particles used for each of the DM component was $2048^3$, resulting
-in a mass resolution of $1.35 \times 10^8$ M$_{\odot}$h$^{-1}$.   
-
-\citet{2011ApJ...740..102K}. 
+in a mass resolution of $1.35 \times 10^8$ M$_{\odot}$h$^{-1}$. \citet{2011ApJ...740..102K}. 
 
 \section{Bullet Geometry and Measurement Setup}
 \label{sec:setup}
+
+The configuration of this system is shown in  Figure
+\ref{configuration}, where you  an distinguish the host halo and
+substructure for a particular configuration in z$=0$.
+
+
+\begin{figure*}
+\begin{center}
+\includegraphics[width=0.90\textwidth]{Figures_eps/Bullet_Group.eps}
+\end{center}
+\caption{Configuration for a host halo (dashed circle) and sub-structure (black circle) in the sample. } 
+\label{configuration}
+\end{figure*}
+
+
+\begin{table*}
+\begin{center}
+\begin{tabular}{ccccccc}\hline\hline
+Sample       & Minimum Mass           & Maximum Mass          & \# Halos  & \# Halos  & \# Halos & \# Halos \\
+             & M$_{\odot}$h$^{-1}$    & M$_{\odot}$h$^{-1}$   &   $z=0$   & $z=0.25$  & $z=0.5$  & $z=1$  \\\hline
+Host Halo    & 0.35$\times{}10^{14}$  & 1.09$\times{}10^{14}$ &    400    &   362     &   310    &  192   \\
+Substructure & 0.38$\times{}10^{11}$  & 0.30$\times{}10^{14}$ &    400    &   362     &   310    &  192   \\\hline
+\end{tabular} 
+\caption{Mass ranges for the two groups selected in this work in different redshifts.}
+\label{table1}
+\end{center}
+\end{table*}
+
+\begin{figure*}
+\begin{center}
+\includegraphics[width=1.0\textwidth]{Figures_eps/figure_5_4.eps}
+\end{center}
+\caption{} 
+\label{cos_theta}
+\end{figure*}
+
+
 
 \section{Results}
 \label{sec:results}
@@ -141,28 +176,13 @@ $\geq10^{14}$ M$_\odot{}$, in the range of mass of the Bullet
 Clusters, in  the Table \ref{table1} is shown the two groups selected
 in this work. For each group, we  classified the corresponding
 substructures most massive and associated with the corresponding host
-halo. The configuration of this system is shown in  Figure
-\ref{configuration}, where you  an distinguish the host halo and
-substructure for a particular configuration in z$=0$. In  this work,
+halo.  In  this work,
 we estimate the expected distribution of displacements
 ($d_{real,(X,Y)}$) in the projection 2-D that can estimate by
 observations, these displacements correspond to the separation between
 the minimal potential of the host halo and the  minimal potential of
 the substructure, both are dark matter distributions. 
 
-
-\begin{table*}
-\begin{center}
-\begin{tabular}{ccccccc}\hline\hline
-Sample       & Minimum Mass           & Maximum Mass          & \# Halos  & \# Halos  & \# Halos & \# Halos \\
-             & M$_{\odot}$h$^{-1}$    & M$_{\odot}$h$^{-1}$   &   $z=0$   & $z=0.25$  & $z=0.5$  & $z=1$  \\\hline
-Host Halo    & 0.35$\times{}10^{14}$  & 1.09$\times{}10^{14}$ &    400    &   362     &   310    &  192   \\
-Substructure & 0.38$\times{}10^{11}$  & 0.30$\times{}10^{14}$ &    400    &   362     &   310    &  192   \\\hline
-\end{tabular} 
-\caption{Mass ranges for the two groups selected in this work in different redshifts.}
-\label{table1}
-\end{center}
-\end{table*}
 
 
 In order to explore the distribution of displacements expected in the observational, we define a new parameter given by:\\
@@ -179,14 +199,7 @@ the fraction in velocity dispersion in the line-of-sigth of the group SL2S SJ085
 Based in the parameter $\left(\frac{\nu_{circ,sub}}{\nu_{circ,halo}}\right)>0.5$, we estimate the expected distribution of
 displacements and this is shown in the Figure \ref{displacements} for the two groups classified in this work.
  
-  
-\begin{figure*}
-\begin{center}
-\includegraphics[width=0.90\textwidth]{Figures_eps/Bullet_Group.eps}
-\end{center}
-\caption{Configuration for a host halo (dashed circle) and sub-structure (black circle) in the sample. } 
-\label{configuration}
-\end{figure*}
+
 
 
 \begin{figure*}
